CODES SMELLS